--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,78 @@
 @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@plugin "daisyui" {
+    themes: false;
+    prefix: "d-";
+};
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@layer components {
+    .form {
+        display: flex;
+        max-width: 433px;
+        width: 80vw;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        background-color: #FAFAFA;
+        box-shadow: 5px 5px 15px #CCCCCC;
+        border-radius: 15px;
+        padding: 50px 30px;
+        padding-bottom: 80px;
+    }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    .label-input {
+        width: 100%;
+        max-width: 300px;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .label {
+        font-weight: 500;
+    }
+
+    .input {
+        height: 40px;
+        width: 100%;
+        max-width: 300px;
+        background-color: #222222;
+        border-radius: 5px;
+        color: #FFFFFF;
+        padding-left: 10px;
+    }
+    
+    /* Esto evita que el autollenado del navegador cambie el color del input */
+    .input:-webkit-autofill {
+        -webkit-box-shadow: 0 0 0 1000px #222222 inset;
+        -webkit-text-fill-color: #FFFFFF;
+    }
+
+    .error-span {
+        height: 10px;
+        font-size: 13px;
+        color: var(--color-red-700);
+        transition: all .3s ease-in-out;
+    }
+
+    .primary-button {
+        background-color: var(--color-emerald-500);
+        color: #FFFFFF;
+        padding: 10px 20px;
+        border-radius: 5px;
+        transition: all .3s ease-in-out;
+    }
+
+    .primary-button:hover {
+        background-color: var(--color-emerald-400);
+        cursor: pointer;
+    }
+
+    .primary-button:active {
+        background-color: var(--color-emerald-600);
+        cursor: pointer;
+    }
 }
