--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,9 @@
         padding: 10px 20px;
         border-radius: 5px;
         transition: all .3s ease-in-out;
+        display: inline-block;
+        text-decoration: none;
+        text-align: center;
     }
 
     .primary-button:hover {
