--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,13 +9,14 @@
     --ease-in-menu: cubic-bezier(0.35,0.02,0.27,0.77);
     
     --color-almostwhite: #EEEEEE;
+    --color-lightGrey: #DDDDDD;
     --color-primary: #00BC7D;
     --color-secondary: #CCFFEE;
     --color-tertiary: #00754E;
     --color-darkPrimary: #003322;
     --color-white: #FFFFFF;
     --color-black: #000000;
-    --color-error: #BD1600;
+    --color-error: #F01C00;
     --color-errorLight: #FFBDBD;
     --color-errorDark: #330000;
     --color-info: #337AFF;
@@ -42,7 +43,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 20px;
+        gap: 50px;
         background-color: #FAFAFA;
         box-shadow: 5px 5px 15px #CCCCCC;
         border-radius: 15px;
@@ -101,9 +102,9 @@
     }
 
     .primary-button {
-        background-color: var(--color-emerald-600);
+        background-color: var(--color-tertiary);
         color: #FFFFFF;
-        padding: 10px 20px;
+        padding: 10px;
         border-radius: 5px;
         transition: all .3s ease-in-out;
         display: inline-block;
@@ -112,18 +113,18 @@
     }
 
     .primary-button:hover {
-        background-color: var(--color-emerald-400);
+        background-color: var(--color-primary);
         cursor: pointer;
     }
 
     .primary-button:active {
-        background-color: var(--color-emerald-500);
+        background-color: var(--color-tertiary);
         cursor: pointer;
     }
 
     .inverse-primary-button {
         background-color: var(--color-neutral-300);
-        color: var(--color-emerald-800);
+        color: var(--color-tertiary);
         padding: 10px 20px;
         border-radius: 5px;
         transition: all .3s ease-in-out;
@@ -140,7 +141,7 @@
     }
 
     .secondary-button {
-        background-color: var(--color-red-500);
+        background-color: var(--color-error);
         color: #FFFFFF;
         padding: 10px 20px;
         border-radius: 5px;
@@ -153,13 +154,13 @@
     }
 
     .secondary-button:active {
-        background-color: var(--color-red-400);
+        background-color: var(--color-error);
         cursor: pointer;
     }
 
     .inverse-secondary-button {
         background-color: var(--color-neutral-300);
-        color: var(--color-red-700);
+        color: var(--color-error);
         padding: 10px 20px;
         border-radius: 5px;
         transition: all .3s ease-in-out;
@@ -198,6 +199,16 @@
 
     .navigationIconText {
         font-weight: medium;
-        font-size: 11px;
+        font-size: .875rem;
+    }
+
+    .settingsLinks {
+        width: 100%;
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: space-between;
+        padding-bottom: 10px;
+        border-bottom: 1px solid var(--color-darkPrimary);
     }
 }
