--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,6 +104,7 @@
     .primary-button {
         background-color: var(--color-tertiary);
         color: #FFFFFF;
+        min-height: 44px;
         padding: 10px;
         border-radius: 5px;
         transition: all .3s ease-in-out;
@@ -113,7 +114,7 @@
     }
 
     .primary-button:hover {
-        background-color: var(--color-primary);
+        background-color: var(--color-tertiary);
         cursor: pointer;
     }
 
@@ -125,6 +126,7 @@
     .inverse-primary-button {
         background-color: var(--color-neutral-300);
         color: var(--color-tertiary);
+        min-height: 44px;
         padding: 10px 20px;
         border-radius: 5px;
         transition: all .3s ease-in-out;
@@ -143,6 +145,7 @@
     .secondary-button {
         background-color: var(--color-error);
         color: #FFFFFF;
+        min-height: 44px;
         padding: 10px 20px;
         border-radius: 5px;
         transition: all .3s ease-in-out;
@@ -161,6 +164,7 @@
     .inverse-secondary-button {
         background-color: var(--color-neutral-300);
         color: var(--color-error);
+        min-height: 44px;
         padding: 10px 20px;
         border-radius: 5px;
         transition: all .3s ease-in-out;
@@ -182,9 +186,16 @@
         padding-bottom: 10px;
     }
 
-    .modal-text-succed {
+    .modal-title {
         text-align: center;
-        font-size: var(--text-lg);
+        font-weight: var(--font-weight-bold);
+        font-size: 1.2rem;
+        color: var(--color-neutral-200);
+    }
+
+    .modal-text {
+        text-align: center;
+        font-size: .875rem;
         color: var(--color-neutral-200);
     }
 
