Solucione las migraciones, agregué los botones para volver atras

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,7 @@
 
 @layer components {
     .form {
+        position: relative;
         display: flex;
         max-width: 433px;
         width: 80vw;
