--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
 
 @theme inline {
     --shadow-medium: 5px 5px 15px #CCCCCC;
+    --shadow-card: 2px 2px 4px rgba(0, 0, 0, .25);
+    
     --ease-in-menu: cubic-bezier(0.35,0.02,0.27,0.77);
     
     --color-almostwhite: #EEEEEE;
@@ -242,7 +244,7 @@
     /* Cards */
 
     .featureCard {
-        @apply flex flex-col gap-[15px] place-items-center place-content-center rounded-2xl
+        @apply flex flex-col gap-[15px] px-[25px] py-[15px] place-items-center place-content-start rounded-2xl shadow-card
         /* Seguir dando estilos */
     }
 }
