--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 @theme inline {
     --shadow-medium: 5px 5px 15px #CCCCCC;
     --shadow-card: 2px 2px 4px rgba(0, 0, 0, .25);
+    --shadow-card-center: 0px 0px 4px rgba(0, 0, 0, .25);
     
     --ease-in-menu: cubic-bezier(0.35,0.02,0.27,0.77);
     
