--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
     
     --ease-in-menu: cubic-bezier(0.35,0.02,0.27,0.77);
     
+    --color-backgroundMockup: rgba(0, 0, 0, .25);
     --color-almostwhite: #EEEEEE;
     --color-lightGray: #DDDDDD;
     --color-grayBackground: #D9D9D9;
@@ -26,6 +27,7 @@
     --color-info: #337AFF;
 
     --animate-fadeIn: fade 0.3s ease-out;
+    --animate-fadeOut: fade 0.3s ease-in;
 
     @keyframes fadeIn {
         0%: { 
@@ -35,6 +37,17 @@
         100%: { 
             opacity: 1; 
             transform: scale(1);
+        }
+    }
+
+    @keyframes fadeOut {
+        0%:{
+            opacity: 1;
+            transform: scale(1);
+        },
+        100%: {
+            opacity: 0;
+            transform: scale(0.95);
         }
     }
 }
