Fix: color blanco del texto del autorellenado de los inputs fue cambiado a negro

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,7 +141,7 @@
     select.input:-webkit-autofill {
         -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
         box-shadow: 0 0 0px 1000px transparent inset !important;
-        -webkit-text-fill-color: var(--color-white) !important;
+        -webkit-text-fill-color: var(--color-darkPrimary) !important;
         background-color: transparent !important;
         transition: background-color 9999s ease-in-out 0s !important;
     }
